# EE6470

./: README.md
Final/: 1D_FFT.pptx  README.md
Final/hls/: System.cpp  System.h  Testbench.cpp  Testbench.h  fft_parameter.h  in_real.h  oneD_FFT.cpp  oneD_FFT.h
Final/hls/stratus/: project.tcl
Final/riscv-vp/sw/fft-dual/: Makefile  main.cpp
Final/riscv-vp/sw/fft-single/: Makefile  in_imag.h  main.cpp
HW1/: CMakeLists.txt  GaussianBlur.h  README.md  Testbench.cpp  Testbench.h  cpp_GaussianBlur.cpp  main.cpp
HW2/: README.md
HW2/FIFO/: GaussianBlur.cpp  filter_def.h
HW2/FIFO_batch/: GaussianBlur.cpp  GaussianBlur.h  Testbench.cpp  Testbench.h  main.cpp
HW3/: CMakeLists.txt  GaussianBlur.cpp  GaussianBlur.h  README.md  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
HW4/: GaussianBlur.cpp  GaussianBlur.h  MemoryMap.h  README.md  Testbench.cpp  filter_def.h  main.cpp
HW5/: README.md
HW5/Non_splited/: GaussianBlur.cpp  GaussianBlur.h  Makefile  README.md  System.cpp  System.h  Testbench.cpp  Testbench.h  filter_def.h
HW5/Splited/: GaussianBlur.cpp  GaussianBlur.h  Testbench.h
HW6/: README.md
HW6/sw/: Makefile
HW6/vp/platform/: GaussianBlur.h  main.cpp
HW7/: README.md
HW7/sw/: Makefile  main.cpp
HW7/vp/platform/: CMakeLists.txt  GaussianBlur0.h  GaussianBlur1.h  filter_def.h  mc_main.cpp
Midterm/: README.md  Report.md
Midterm/Baseline/: GaussianBlur.cpp  System.h
Midterm/LoopUnrolling/: GaussianBlur.cpp  System.cpp
Midterm/Pipelining/: GaussianBlur.cpp  GaussianBlur.h  Makefile.prj  Testbench.cpp  project.tcl
(+7 files in other folders)
